# zuspec-dm

./: .gitignore  Agents.md  ivpm.yaml  pyproject.toml
docs/: adding-classes.md  class-structure.md  zuspec-datamodel-plan.md  zuspec-datamodel-py-plan.md
src/zuspec/dm/: __init__.py  accept.py  base.py  bindset.py  context.py  data_type.py  exec.py  expr.py  expr_phase2.py  fields.py  loc.py  profile_rgy.py  stmt.py  visitor.py
src/zuspec/dm/fe/: __init__.py
src/zuspec/dm/fe/py/: __init__.py  args.py  expr.py  mod.py  pattern.py  stmt.py
src/zuspec/dm/impl/: __init__.py  bindset.py  context.py  data_type.py  exec.py  expr.py  fields.py
tests/dm/: test_data_type_array.py  test_data_type_bitvector.py  test_data_type_bool.py  test_data_type_enum.py  test_data_type_list.py  test_data_type_ptr.py  test_data_type_ref.py  test_data_type_string.py  test_smoke.py  test_type_constraint_block.py  test_type_constraint_expr.py  test_type_constraint_ifelse.py  test_type_expr_bin.py  test_type_expr_fieldref.py  test_type_expr_ref_bottomup.py  test_type_expr_ref_topdown.py
tests/unit/: test_arguments_keyword_alias.py  test_expr_core.py  test_formatted_string.py  test_match_stmt.py  test_phase2_containers.py  test_stmt_assign_if.py  test_try_except.py  test_visit_basic.py  test_with_stmt.py
tests/unit/py/: test_fe_except_handler.py  test_fe_expr_name.py  test_fe_module_typeignore.py  test_fe_pattern_match.py  test_fe_starred.py
